--- a/css/style.css
+++ b/css/style.css
@@ -63,4 +63,23 @@ h1{
     text-align: center;
     color: #fff;
     background-color: #000;
+    font-size: 1.5rem;
+}
+
+.card{
+    background-color: #000;
+    width: 18rem; 
+    margin: 10px;
+    border: 2px solid #fff;
+}
+
+.card-title{
+    color: #fff;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.card-text{
+    color: #fff;
+    margin-bottom: 10px;
 }
