--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,15 @@ body{
     background-repeat: no-repeat;
     background-position: center center; 
     background-attachment: fixed; 
-    padding: 30px;
+    padding: 40px 20px;
 }
 
 h1{
     font-weight: bold;
     margin-bottom: 50px;
     color: #fff;
+    text-align: center;
+    font-size: 2.5rem;
 }
 
 
@@ -26,7 +28,7 @@ h1{
     border-radius: 5px;
     padding: 0px 10px;
     margin-bottom: 30px;
-    width: 60%;
+    width: 80%;
 }
 
 .search-container > input{
@@ -36,17 +38,17 @@ h1{
     padding: 5px;
     background-color: #000;
     color: #fff;
-    width: 70%;
+    width: 100%;
 }
 
 .search-container > input::placeholder{
-    font-size: 1rem;
+    font-size: 14px;
     color: #fff;
 }
 
 .search_icon{
     color: #fff;
-    font-size: 1rem;
+    font-size: 14px;
 }
 
 .btn{
@@ -54,6 +56,11 @@ h1{
 }
 
 .container-button{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    flex-wrap: wrap;
+    gap: 20px;
     margin-bottom: 30px;
 }
 
@@ -64,6 +71,11 @@ h1{
     color: #fff;
     background-color: #000;
     font-size: 1.5rem;
+}
+
+.row{
+    justify-content: center;
+    align-items: center;
 }
 
 .card{
@@ -77,9 +89,15 @@ h1{
     color: #fff;
     font-weight: bold;
     text-decoration: underline;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 .card-text{
     color: #fff;
     margin-bottom: 10px;
+}
+
+.starshipCard{
+    height: 18rem;
 }
