--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,16 @@ h1{
 }
 
 .btn{
-    margin-right: 10px;
+    background-color: #000;
+    color: #fff;
+    border: 1px solid #fff;
+    transition: all 0.5s;
+}
+
+.btn:hover{
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
 }
 
 .container-button{
